--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">NBAFantasy</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="editar_opcion">Editar equipo</string>
+    <string name="listjugador_opcion">Jugadores </string>
+    <string name="juego_opcion">Juego</string>
+    <string name="resultado_opcion">Resultados partidos</string>
 </resources>
