--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="accion_ajuste">ajustes</string>
+    <string name="favorite_button_description">Botón de Estrella</string>
 </resources>
